chore: fix build dependencies

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
     needs:
-      - build-and-cache-node-modules
+      - detect-minor-version
     strategy:
       fail-fast: true
       matrix:
