--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -256,11 +256,11 @@ jobs:
           brew install colima
           colima start
 
-      # - name: Cache node modules
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ./node_modules/**
-      #     key: cache-node-modules-${{ github.run_id }}
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
 
       - name: download the binary from the build-binaries job and make it executable
         if: ${{ !github.event.pull_request.head.repo.fork }}
