--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -35,6 +35,9 @@
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"dependencies": {
 		"@taqueria/protocol": "^0.20.2",
+		"@taquito/signer": "^13.0.1",
+		"@taquito/taquito": "^13.0.1",
+		"@taquito/utils": "^13.0.1",
 		"i18next": "^21.8.4",
 		"project-name-generator": "^2.1.9",
 		"rambda": "^7.1.4",
