--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Build all
         run: |
-          echo "$(pwd)" >> $GITHUB_PATH
+          export PATH="$PATH:$(pwd)"
           npm run build-all
 
       - name: Cache node modules
