--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ on:
 
 env:
   SCOPE: '@taqueria'
+  NPM_REGISTRY: 'https://registry.npmjs.org/'
 
 concurrency:
   group: ${{ github.ref_name || github.ref }}
@@ -30,7 +31,7 @@ jobs:
     outputs:
       vscode: ${{ steps.filter.outputs.vscode }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: dorny/paths-filter@v2
       id: filter
       with:
@@ -57,6 +58,33 @@ jobs:
         else
           echo "::set-output name=result::odd"
         fi
+  build-and-cache-node-modules:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v3
+         
+      - uses: actions/setup-node@v3
+        with: 
+          registry-url: ${{ env.NPM_REGISTRY }}
+          scope: "${{ env.SCOPE }}"
+          cache: 'npm'
+
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: "1.23.4"
+
+      - name: Build all
+        run: |
+          export PATH="$PATH:$(pwd)"
+          npm run build-all
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
 
   build-binaries:
     permissions:
@@ -64,6 +92,8 @@ jobs:
       id-token: 'write'
     runs-on: ${{ matrix.os }}
     if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
+    needs:
+      - build-and-cache-node-modules
     strategy:
       fail-fast: true
       matrix:
@@ -71,23 +101,14 @@ jobs:
          - os: ubuntu-latest
            os_short: ubuntu
            deno_target: "x86_64-unknown-linux-gnu"
-           cache_path: |
-            ./deno
-            ~/.cache/deno
            taqueria_bin: "taq"
          - os: windows-latest
            os_short: windows
            deno_target: "x86_64-pc-windows-msvc"
-           cache_path: |
-            ./deno
-            ~/AppData/Local/deno
            taqueria_bin: "taq.exe"
          - os: macOS-latest
            os_short: macos
            deno_target: "x86_64-apple-darwin"
-           cache_path: |
-            ./deno
-            ~/Library/Caches/deno
            taqueria_bin: "taq"
 
     outputs:
@@ -100,17 +121,12 @@ jobs:
 
     steps:
       - name: Setup repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
           deno-version: "1.23.4"
-
-      - uses: actions/cache@v3
-        with:
-          path: ${{ matrix.cache_path }}
-          key: ${{ runner.os }}-deno-${{ hashFiles('**/deno-lock.json') }}
 
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
       ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
@@ -150,131 +166,6 @@ jobs:
         run: |
           echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
 
-  publish-protocol-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-protocol
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-sdk-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-protocol-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-sdk
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-toolkit-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-protocol-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-toolkit
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-ligo-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-ligo
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-  
-  publish-smartpy-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-smartpy
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-taquito-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-taquito
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-flextesa-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-flextesa
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-archetype-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-archetype
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-tezos-client-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-tezos-client
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-contract-types-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-contract-types
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-ipfs-pinata-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-ipfs-pinata
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-metadata-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-metadata
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-jest-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-jest
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-state-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-state
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
   gather-info-for-e2e-tests:
     runs-on: ubuntu-latest
     needs:
@@ -288,10 +179,11 @@ jobs:
       test-chunks-formatted: ${{ steps['format-test-chunks'].outputs['test-chunks-formatted'] }}
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16.16.x
+          cache: 'npm'
 
       # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
       - id: set-test-chunks
@@ -347,19 +239,28 @@ jobs:
       - gather-info-for-e2e-tests
     if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16.16.x
+          cache: 'npm'
 
       - uses: denoland/setup-deno@v1
         with:
           deno-version: "1.23.4"
 
-      - uses: actions/cache@v3
+      - name: setup-docker
+        if: runner.os == 'macOS'
+        run: |
+          brew install docker
+          brew install colima
+          colima start
+
+      - name: Cache node modules
+        uses: actions/cache@v3
         with:
-          path: ${{ matrix.cache_path }}
-          key: ${{ runner.os }}-deno-${{ hashFiles('**/deno-lock.json') }}
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
 
       - name: download the binary from the build-binaries job and make it executable
         if: ${{ !github.event.pull_request.head.repo.fork }}
@@ -380,21 +281,6 @@ jobs:
           [[ $(./taq init -p ./test_project) == "Project taq'ified!" ]]
           chmod +x taq
           echo "$(pwd)" >> $GITHUB_PATH
-
-      - name: install dependencies
-        run: npm ci
-
-      - name: setup-docker
-        if: runner.os == 'macOS'
-        run: |
-          brew install docker
-          brew install colima
-          colima start
-
-      - name: build packages for testing
-        run: |
-          npm run build -w taqueria-sdk -w taqueria-protocol -w taqueria-plugin-flextesa -w taqueria-plugin-taquito -w taqueria-plugin-ligo -w taqueria-plugin-smartpy -w taqueria-flextesa-manager -w taqueria-plugin-contract-types -w taqueria-plugin-ipfs-pinata -w taqueria-plugin-metadata -w taqueria-plugin-archetype -w taqueria-plugin-tezos-client -w taqueria-state -w taqueria-plugin-jest
-          npm run build-docker -w taqueria-flextesa-manager
 
       - name: Run unit tests
         run: npm run test:unit -w tests
@@ -421,10 +307,48 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.E2E_MONITORING_SLACK }} # required
 
+  publish-npm-packages:
+    runs-on: ubuntu-latest
+    needs:
+      - run-tests
+    permissions:
+      packages: write
+      contents: read
+    env: 
+      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with: 
+          registry-url: ${{ env.NPM_REGISTRY }}
+          scope: "${{ env.SCOPE }}"
+          cache: 'npm'
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
+
+      - name: Publish for PR
+        if:  ${{ github.event_name == 'pull_request' }}
+        run: |
+          npm publish --workspaces --tag 'preview' --access public --dry-run --no-private
+                
+      - name: Publish for prerelease
+        if:  ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
+        run: |
+          npm publish --workspaces --tag 'next' --access public
+      
+      - name: Publish for official release
+        if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
+        run: |
+          npm publish --workspaces --tag 'latest' --access public 
+  
   vscode-extension-workflow:
     needs: 
       - detect-changes
-      - publish-state-plugin-to-npm
+      - publish-npm-packages
 
     if: ${{ (needs.detect-changes.outputs.vscode == 'true' || 
             github.event_name == 'release' || 
@@ -445,9 +369,10 @@ jobs:
             !github.event.pull_request.head.repo.fork }}
     needs: 
       - build-binaries
+      - publish-npm-packages
       - vscode-extension-workflow
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: create pr comment
         uses: actions/github-script@v5
@@ -535,20 +460,12 @@ jobs:
     needs:
       - detect-minor-version
       - build-binaries
-      - publish-ligo-plugin-to-npm
-      - publish-smartpy-plugin-to-npm
-      - publish-taquito-plugin-to-npm
-      - publish-flextesa-plugin-to-npm
-      - publish-contract-types-plugin-to-npm
-      - publish-archetype-plugin-to-npm
-      - publish-tezos-client-plugin-to-npm
-      - publish-state-plugin-to-npm
-      - publish-jest-plugin-to-npm
+      - publish-npm-packages
       - vscode-extension-workflow
     if: ${{ startsWith(github.ref, 'refs/tags/v') &&
             !github.event.pull_request.head.repo.fork }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Download binaries 
         id: download-binaries 
