--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -4,7 +4,7 @@
 	"description": "A better way to build on Tezos",
 	"publisher": "ecadlabs",
 	"version": "0.20.2",
-	"preview": true,
+	"private": true,
 	"engines": {
 		"vscode": "^1.68.1",
 		"node": "^16.0.0"
