--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -310,7 +310,8 @@ jobs:
   publish-npm-packages:
     runs-on: ubuntu-latest
     needs:
-      - run-tests
+      - build-binaries
+      # - run-tests
     permissions:
       packages: write
       contents: read
