--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -335,9 +335,9 @@ jobs:
       - name: Publish for PR
         if:  ${{ github.event_name == 'pull_request' }}
         run: |
-          SHORT_SHA=$(${GITHUB_SHA} | cut -c1-8)
+          SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-8)
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          BRANCH_NAME=$($GITHUB_REF | cut -d'/' -f 3)
+          BRANCH_NAME=$(echo ${GITHUB_REF} | cut -d'/' -f 3)
           TARGET_VERSION="${PACKAGE_VERSION}-${SHORT_SHA}-${BRANCH_NAME}"
           npx lerna version "${TARGET_VERSION}" --no-push --no-git-tag-version --yes
           echo ${VERDACCIO_TOKEN} >> ~/.npmrc
