--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,85 +86,85 @@ jobs:
           path: ./node_modules/**
           key: cache-node-modules-${{ github.run_id }}
 
-  build-binaries:
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-    runs-on: ${{ matrix.os }}
-    if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
-    needs:
-      - build-and-cache-node-modules
-    strategy:
-      fail-fast: true
-      matrix:
-       include:
-         - os: ubuntu-latest
-           os_short: ubuntu
-           deno_target: "x86_64-unknown-linux-gnu"
-           taqueria_bin: "taq"
-         - os: windows-latest
-           os_short: windows
-           deno_target: "x86_64-pc-windows-msvc"
-           taqueria_bin: "taq.exe"
-         - os: macOS-latest
-           os_short: macos
-           deno_target: "x86_64-apple-darwin"
-           taqueria_bin: "taq"
+  # build-binaries:
+  #   permissions:
+  #     contents: 'read'
+  #     id-token: 'write'
+  #   runs-on: ${{ matrix.os }}
+  #   if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
+  #   needs:
+  #     - build-and-cache-node-modules
+  #   strategy:
+  #     fail-fast: true
+  #     matrix:
+  #      include:
+  #        - os: ubuntu-latest
+  #          os_short: ubuntu
+  #          deno_target: "x86_64-unknown-linux-gnu"
+  #          taqueria_bin: "taq"
+  #        - os: windows-latest
+  #          os_short: windows
+  #          deno_target: "x86_64-pc-windows-msvc"
+  #          taqueria_bin: "taq.exe"
+  #        - os: macOS-latest
+  #          os_short: macos
+  #          deno_target: "x86_64-apple-darwin"
+  #          taqueria_bin: "taq"
 
-    outputs:
-      public-url-ubuntu: ${{ steps.public-url.outputs.ubuntu }}
-      public-url-windows: ${{ steps.public-url.outputs.windows }}
-      public-url-macos: ${{ steps.public-url.outputs.macos }}
+  #   outputs:
+  #     public-url-ubuntu: ${{ steps.public-url.outputs.ubuntu }}
+  #     public-url-windows: ${{ steps.public-url.outputs.windows }}
+  #     public-url-macos: ${{ steps.public-url.outputs.macos }}
 
-    env:
-      DENO_TARGET: ${{ matrix.deno_target }}
+  #   env:
+  #     DENO_TARGET: ${{ matrix.deno_target }}
 
-    steps:
-      - name: Setup repo
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Setup repo
+  #       uses: actions/checkout@v3
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: "1.23.4"
+  #     - name: Setup Deno
+  #       uses: denoland/setup-deno@v1
+  #       with:
+  #         deno-version: "1.23.4"
 
-      ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
-      ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
-      - name: Build the binary for ${{ matrix.os }}
-        id: build-bin
-        shell: bash
-        env:
-          TAQ_VERSION: ${{ github.ref_name }}
-          DENO_DIR: "./deno"
-        run: |
-          BUILD=`git rev-parse --short "$GITHUB_SHA"`
-          TAQ_VERSION="${TAQ_VERSION/\//-}"
-          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt --target $DENO_TARGET index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
-          ./"${{ matrix.taqueria_bin }}" init -p ./test_project
-          if [ ! -f ./test_project/.taq/config.json ]; then
-            echo "Project not initialized"
-            exit 1
-          fi
-          mv "${{ matrix.taqueria_bin }}" "taq.${{ matrix.deno_target }}"
+  #     ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
+  #     ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
+  #     - name: Build the binary for ${{ matrix.os }}
+  #       id: build-bin
+  #       shell: bash
+  #       env:
+  #         TAQ_VERSION: ${{ github.ref_name }}
+  #         DENO_DIR: "./deno"
+  #       run: |
+  #         BUILD=`git rev-parse --short "$GITHUB_SHA"`
+  #         TAQ_VERSION="${TAQ_VERSION/\//-}"
+  #         deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt --target $DENO_TARGET index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
+  #         ./"${{ matrix.taqueria_bin }}" init -p ./test_project
+  #         if [ ! -f ./test_project/.taq/config.json ]; then
+  #           echo "Project not initialized"
+  #           exit 1
+  #         fi
+  #         mv "${{ matrix.taqueria_bin }}" "taq.${{ matrix.deno_target }}"
 
-      - name: Authenticate with GCP
-        id: gcp-auth
-        uses: google-github-actions/auth@v0
-        with:
-          workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
-          service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
+  #     - name: Authenticate with GCP
+  #       id: gcp-auth
+  #       uses: google-github-actions/auth@v0
+  #       with:
+  #         workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
+  #         service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
-      - name: Upload binary to GCP
-        id: upload-file
-        uses: 'google-github-actions/upload-cloud-storage@v0'
-        with:
-          path: "taq.${{ matrix.deno_target }}"
-          destination: "taqueria-artifacts/${{ github.ref }}"
+  #     - name: Upload binary to GCP
+  #       id: upload-file
+  #       uses: 'google-github-actions/upload-cloud-storage@v0'
+  #       with:
+  #         path: "taq.${{ matrix.deno_target }}"
+  #         destination: "taqueria-artifacts/${{ github.ref }}"
 
-      - name: Set public url
-        id: public-url
-        run: |
-          echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
+  #     - name: Set public url
+  #       id: public-url
+  #       run: |
+  #         echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
 
   # gather-info-for-e2e-tests:
   #   runs-on: ubuntu-latest
@@ -310,7 +310,7 @@ jobs:
   publish-npm-packages:
     runs-on: ubuntu-latest
     needs:
-      - build-binaries
+      - build-and-cache-node-modules
       # - run-tests
     permissions:
       packages: write
@@ -342,9 +342,9 @@ jobs:
           TARGET_VERSION="${PACKAGE_VERSION}-${SHORT_SHA}-${BRANCH_NAME}"
           npx lerna version "${TARGET_VERSION}" --no-push --no-git-tag-version --yes
           echo ${VERDACCIO_TOKEN} >> ~/.npmrc
-          git config user.email "actions@github.com" && git config user.name "Github Actions"
-          git add -A && git commit -m "commit for lerna"
-          npx lerna publish --dist-tag edge from-package --yes --registry https://npm.ecadinfra.com
+        # git config user.email "actions@github.com" && git config user.name "Github Actions"
+        # git add -A && git commit -m "commit for lerna"
+        # npx lerna publish --dist-tag edge from-package --yes --registry https://npm.ecadinfra.com
                 
       - name: Publish for prerelease
         if:  ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
