chore: test publish for PR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -342,7 +342,7 @@ jobs:
           TARGET_VERSION="${PACKAGE_VERSION}-${SHORT_SHA}-${BRANCH_NAME}"
           npx lerna version "${TARGET_VERSION}" --no-push --no-git-tag-version --yes
           echo ${VERDACCIO_TOKEN} >> ~/.npmrc
-        # git config user.email "actions@github.com" && git config user.name "Github Actions"
+          git config user.email "actions@github.com" && git config user.name "Github Actions"
         # git add -A && git commit -m "commit for lerna"
         # npx lerna publish --dist-tag edge from-package --yes --registry https://npm.ecadinfra.com
                 
