--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,16 +76,16 @@ jobs:
           deno-version: "1.23.4"
 
       - name: Build all
+        env:
+          TAQ_VERSION: ${{ github.ref_name }}
         run: |
-          echo "Testing build all"
           export PATH="$PATH:$(pwd)"
-          echo "$(pwd)"
-          echo "$(pwd)" >> $GITHUB_PATH
-          BUILD=`git rev-parse --short "$GITHUB_SHA"`
-          echo "Show branch"
-          git branch --show-current
           TAQ_VERSION="${TAQ_VERSION/\//-}"
-          npm run build-all
+          BUILD=$(git rev-parse --short "$GITHUB_SHA")
+          DENO_DIR=./deno deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --quickstart "$(cat quickstart.md)" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
+          npm install 
+          npm run build --workspaces --if-present --include-workspace-root
+          npm run build-docker --workspaces --if-present
           taq --version 
           taq --build 
           echo "Done testing"
