--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@taqueria/protocol": "^0.20.2",
 		"i18next": "^21.8.4",
+		"node-fetch": "^2.6.7",
 		"project-name-generator": "^2.1.9",
 		"rambda": "^7.1.4",
 		"stacktrace-js": "^2.0.2",
