--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -344,9 +344,9 @@ jobs:
           BRANCH_NAME=$(echo ${GITHUB_REF} | cut -d'/' -f 3)
           TARGET_VERSION="${PACKAGE_VERSION}-${SHORT_SHA}-${BRANCH_NAME}"
           npx lerna version "${TARGET_VERSION}" --no-push --no-git-tag-version --yes
+          echo ${VERDACCIO_TOKEN} >> ~/.npmrc
           npm publish --workspaces --no-private --registry https://npm.ecadinfra.com
         # echo "Token"
-        # echo ${VERDACCIO_TOKEN} >> ~/.npmrc
         # echo "Git config"
         # git config user.email "actions@github.com" && git config user.name "Github Actions"
         # echo "Add and commit"
