--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,6 @@ on:
   release:
     types: [published]
 
-env:
-  SCOPE: '@taqueria'
-  NPM_REGISTRY: 'https://registry.npmjs.org/'
-
 concurrency:
   group: ${{ github.ref_name || github.ref }}
   cancel-in-progress: true
@@ -321,11 +317,13 @@ jobs:
     env: 
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       VERDACCIO_TOKEN: ${{ secrets.ECADINFRA_NPM_AUTH_TOKEN }}
+      SCOPE: '@taqueria'
+      NPM_REGISTRY: https://registry.npmjs.org/
+      PRIVATE_NPM_REGISTRY: https://npm.ecadinfra.com
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with: 
-          registry-url: ${{ env.NPM_REGISTRY }}
           scope: "${{ env.SCOPE }}"
           cache: 'npm'
 
@@ -345,7 +343,7 @@ jobs:
           TARGET_VERSION="${PACKAGE_VERSION}-${SHORT_SHA}-${BRANCH_NAME}"
           npx lerna version "${TARGET_VERSION}" --no-push --no-git-tag-version --yes
           echo ${VERDACCIO_TOKEN} >> ~/.npmrc
-          npm publish --workspaces --no-private --registry https://npm.ecadinfra.com
+          npm publish --workspaces --no-private --registry $PRIVATE_NPM_REGISTRY
         # echo "Token"
         # echo "Git config"
         # git config user.email "actions@github.com" && git config user.name "Github Actions"
