fix(ci): added a condition to run the publish job if tests are skipped

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -314,6 +314,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - run-tests
+    if: ${{ always() && !(contains(needs.*.result, 'failure')) }}
     permissions:
       packages: write
       contents: read
