--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -313,7 +313,7 @@ jobs:
   publish-npm-packages:
     runs-on: ubuntu-latest
     needs:
-      - run-tests
+      - build-and-cache-node-modules
     permissions:
       packages: write
       contents: read
