--- a/package.json
+++ b/package.json
@@ -69,5 +69,14 @@
 	],
 	"lint-staged": {
 		"*.{ts,tsx,js,jsx,cjs,mjs,json}": "dprint fmt"
+	},
+	"dependencies": {
+		"@docusaurus-terminology/parser": "^1.3.0",
+		"@docusaurus-terminology/term": "^1.0.0",
+		"@docusaurus/core": "^2.1.0",
+		"@docusaurus/plugin-google-analytics": "^2.1.0",
+		"@docusaurus/plugin-google-gtag": "^2.1.0",
+		"@docusaurus/plugin-sitemap": "^2.1.0",
+		"@docusaurus/preset-classic": "^2.1.0"
 	}
 }
