--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -319,7 +319,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with: 
-          registry-url: ${{ env.NPM_REGISTRY }}
           scope: "${{ env.SCOPE }}"
           cache: 'npm'
 
@@ -337,12 +336,12 @@ jobs:
       - name: Publish for prerelease
         if:  ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          npm publish --workspaces --tag 'next' --access public
+          npm publish --workspaces --tag 'next' --access public --registry $NPM_REGISTRY
       
       - name: Publish for official release
         if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
-          npm publish --workspaces --tag 'latest' --access public 
+          npm publish --workspaces --tag 'latest' --access public --registry $NPM_REGISTRY
   
   vscode-extension-workflow:
     needs: 
