--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/checkout@v3
          
       - uses: actions/setup-node@v3
-        with: 
+        with:
           cache: 'npm'
 
       - name: Setup Deno
@@ -319,8 +319,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with: 
+          registry-url: 'https://registry.npmjs.org'
           scope: "${{ env.SCOPE }}"
-          cache: 'npm'
+
+      - run: npm ci
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -336,12 +338,12 @@ jobs:
       - name: Publish for prerelease
         if:  ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          npm publish --workspaces --tag 'next' --access public --registry $NPM_REGISTRY
+          npm publish --workspaces --tag 'next' --access public
       
       - name: Publish for official release
         if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
         run: |
-          npm publish --workspaces --tag 'latest' --access public --registry $NPM_REGISTRY
+          npm publish --workspaces --tag 'latest' --access public 
   
   vscode-extension-workflow:
     needs: 
