--- a/.github/workflows/add-pr-to-scrum-board.yml
+++ b/.github/workflows/add-pr-to-scrum-board.yml
@@ -6,6 +6,7 @@ on:
       - opened
       - ready_for_review
 
+jobs:
   add-pr-to-taqueria-dev-project:
     name: Add PR to project
     runs-on: ubuntu-latest
