--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -312,13 +312,14 @@ jobs:
       packages: write
       contents: read
     env: 
-      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      NODE_AUTH_TOKEN: ${{ secrets.NPMJS_PAT }}
       SCOPE: '@taqueria'
       NPM_REGISTRY: 'https://registry.npmjs.org/'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with: 
+          registry-url: ${{ env.NPM_REGISTRY }}
           scope: "${{ env.SCOPE }}"
           cache: 'npm'
 
@@ -336,8 +337,7 @@ jobs:
       - name: Publish for prerelease
         if:  ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
         run: |
-          echo "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
-          npm publish --workspaces --tag 'next' --access public --registry $NPM_REGISTRY
+          npm publish --workspaces --tag 'next' --access public
       
       - name: Publish for official release
         if: ${{ !github.event.release.prerelease && github.event.action == 'published' }}
