--- a/.github/workflows/add-pr-to-scrum-board.yml
+++ b/.github/workflows/add-pr-to-scrum-board.yml
@@ -1,25 +1,18 @@
-name: "Add new PR's to the scrum board"
+name: Add new PR's to the scrum board
+
 on:
   pull_request:
     types:
       - opened
       - ready_for_review
+
 jobs:
   add-pr-to-taqueria-dev-project:
-    name: Add PR to project
+    name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-    - name: New PR
-      if: ${{ !github.event.pull_request.ready_for_review }}
-      uses: konradpabjan/actions-add-new-issue-to-column@v1.1
-      with:
-        action-token: "${{ secrets.ADD_TO_PROJECT_PAT }}"
-        project-url: "https://github.com/orgs/ecadlabs/projects/9"
-        column-name: "🚀  Current Sprint"
-    - name: PR Ready for review
-      if: ${{ github.event.pull_request.ready_for_review }}
-      uses: konradpabjan/actions-add-new-issue-to-column@v1.1
-      with:
-        action-token: "${{ secrets.ADD_TO_PROJECT_PAT }}"
-        project-url: "https://github.com/orgs/ecadlabs/projects/9"
-        column-name: "👀 In review"
+      - uses: actions/add-to-project@v0.3.0
+        with:
+          project-url: https://github.com/orgs/ecadlabs/projects/9
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+          name: Move PR's to current sprint
