chore: use npm instead of lerna to publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -342,11 +342,7 @@ jobs:
           BRANCH_NAME=$(echo ${GITHUB_REF} | cut -d'/' -f 3)
           TARGET_VERSION="${PACKAGE_VERSION}-${SHORT_SHA}-${BRANCH_NAME}"
           npx lerna version "${TARGET_VERSION}" --no-push --no-git-tag-version --yes
-          echo ${VERDACCIO_TOKEN} >> ~/.npmrc
-          git config user.email "ops@ecadlabs.com" && git config user.name "Github Actions"
-          HUSKY=0 git add -A && HUSKY=0 git commit -m "commit for lerna"
-          HUSKY=0 npx lerna publish --dist-tag edge from-package --yes --registry https://npm.ecadinfra.com
-        # npm publish --workspaces --no-private --registry $PRIVATE_NPM_REGISTRY
+          npm publish --workspaces --no-private --registry $PRIVATE_NPM_REGISTRY
           
                 
       - name: Publish for prerelease
