chore: add auth step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -337,6 +337,7 @@ jobs:
         if:  ${{ github.event_name == 'pull_request' }}
         run: |
           export HUSKY=0
+          echo ${VERDACCIO_TOKEN} >> ~/.npmrc
           SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-8)
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
           BRANCH_NAME=$(echo ${GITHUB_REF} | cut -d'/' -f 3)
